tests/invalid/Template_Invalid_22.whiley
function f<T>(&T ptr, S value) -> (bool x):
    return false